[package]
name = "os"
version = "0.1.0"


[dependencies]
sbi-rt = { version = "0.0.3", features = ["legacy"] }
log = "0.4"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6.0"
bitflags = "2.5.0"
xmas-elf = "0.9.1"

[profile.release]
debug = true